<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">vvvClock</string>
    <string name="action_settings">震える時間を選びます</string>
    <string name="start_status">ON</string>
    <string name="stop_status">OFF</string>
    <string name="vvv_main_info">振動で時間を伝えるアプリです</string>
    <string name="vvv_menu_info">メニューで振動する時間を設定します</string>
    <string name="vvv_button_info">振動</string>

    <string name="one_am_title">1時</string>
    <string name="two_am_title">2時</string>
    <string name="three_am_title">3時</string>
    <string name="four_am_title">4時</string>
    <string name="five_am_title">5時</string>
    <string name="six_am_title">6時</string>
    <string name="seven_am_title">7時</string>
    <string name="eight_am_title">8時</string>
    <string name="nine_am_title">9時</string>
    <string name="ten_am_title">10時</string>
    <string name="eleven_am_title">11時</string>
    <string name="twelve_am_title">12時</string>

    <string name="one_pm_title">13時</string>
    <string name="two_pm_title">14時</string>
    <string name="three_pm_title">15時</string>
    <string name="four_pm_title">16時</string>
    <string name="five_pm_title">17時</string>
    <string name="six_pm_title">18時</string>
    <string name="seven_pm_title">19時</string>
    <string name="eight_pm_title">20時</string>
    <string name="nine_pm_title">21時</string>
    <string name="ten_pm_title">22時</string>
    <string name="eleven_pm_title">23時</string>
    <string name="twelve_pm_title">24時</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
